tests/machine/x/pl/bool_chain.out
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:3:5: Syntax error: Operand expected, unquoted comma or bar found
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:11:8: Syntax error: Operand expected, unquoted comma or bar found