tests/machine/x/pl/bool_chain.pl
% Generated by Mochi compiler v0.10.27 on 2025-07-17T06:41:11Z
:- style_check(-singleton).
print_val(V) :- number(V), !, format('~g', [V]).
print_val(V) :- write(V).

boom(_Res) :-
    print_val("boom"), nl,
    _Res = true.

:- initialization(main, main).
main :-
    ((((1 < 2), (2 < 3)), (3 < 4)) -> _V0 = true ; _V0 = false),
    print_val(_V0), nl,
    boom(_V1),
    ((((1 < 2), (2 > 3)), _V1) -> _V2 = true ; _V2 = false),
    print_val(_V2), nl,
    boom(_V3),
    (((((1 < 2), (2 < 3)), (3 > 4)), _V3) -> _V4 = true ; _V4 = false),
    print_val(_V4), nl,
    true.
